# libsmdev

./: .gitignore  Makefile.am  configure.ac  libsmdev.ini  synclibs.ps1
common/: config_winapi.h
dpkg/: control  rules
include/: libsmdev.h.in
include/libsmdev/: error.h
libsmdev/: libsmdev_handle.c
manuals/: libsmdev.3  smdevinfo.1
msvscpp/: libsmdev.sln
msvscpp/pysmdev/: pysmdev.vcproj
msvscpp/smdev_test_handle/: smdev_test_handle.vcproj
pysmdev/: pysmdev.c  pysmdev.h  pysmdev_handle.c  pysmdev_handle.h
smdevtools/: Makefile.am  info_handle.c  info_handle.h  smdevinfo.c  smdevtools_getopt.c  smdevtools_getopt.h  smdevtools_output.c
tests/: Makefile.am  atlocal.in  pysmdev_test_handle.py  pysmdev_test_support.py  runtests.py  runtests.sh  smdev_test_ata.c  smdev_test_handle.c  smdev_test_memory.c  smdev_test_optical_disc.c  smdev_test_scsi.c  smdev_test_sector_range.c  smdev_test_string.c  smdev_test_track_value.c  test_library.at  test_library.ps1  test_manpages.at  test_python_module.at  test_smdevinfo.ps1  test_tools.at
